# nova_bytecode

./: Cargo.toml  README.md  config.toml  git-conventional-commits.yaml  grammar.txt  if.txt  if3.txt  if4.txt  ifd.txt  ifpl.txt  loc2.txt  locals.txt  notes.txt  play.txt  prt.txt  s.txt  scope.txt  scope2.txt  src.txt  src3.txt  test.txt  tmp.txt
.cargo/: config.toml
src/: compiler.rs  err.rs  lib.rs  main.rs  ops.rs  parser.rs  scanner.rs  src.txt  src2.txt  stack.rs  vm.rs
src/data/: mod.rs  ops.rs  stack.rs
src/parser/: mod.rs  parser.rs  rules.rs
src/scanner/: delim.rs  tokens.rs
src/utils/: constants.rs  err.rs  file.rs  misc.rs  mod.rs  trie.rs
tests/: blk.txt  if.txt  if2.txt  if3.txt  integration.rs  locals2.txt  prt.txt  scope.txt  src3.txt
