[package]
name = "nova_bytecode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.19"
rustyline = "12.0.0"
shellexpand = "3.1.0"

[lib]
name = "nova"
path = "src/lib.rs"
